<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017-2019 The PixelDust Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App Title -->
    <string name="altho_settings_title">Wings</string>

    <!-- Categories -->
    <string name="button_title">Buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents apps</string>
    <string name="statusbar_title">Status bar</string>
    <string name="volume_title">Volume Settings</string>
    <string name="icons_category">Icons</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FFDDDDDD</string>
    <string name="hex_check_button_text">PREVIEW</string>
    <string name="hex_reset_button_text">RESET</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="color_right_arrow" translatable="false">"→"</string>
    <string name="color_down_arrow" translatable="false">"↓"</string>
    <string name="longpress_info">Longpress box to save color</string>

    <!-- Network traffic -->
    <string name="network_traffic_title">Network traffic indicator</string>
    <string name="network_traffic_summary">Enable or disable network speed indicator in status bar</string>
    <string name="network_traffic_state_title">Enable "Network traffic indicator"</string>
    <string name="network_options_title">Options</string>
    <string name="network_traffic_autohide_title">Hide network traffic indicator when inactive</string>
    <string name="network_traffic_autohide_summary">Hide when the network traffic is below 1 KB/s</string>

    <!-- Media art -->
    <string name="lockscreen_media_art_options_title">Media cover art</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Display media cover art when available</string>

    <!-- Lock screen cover art -->
    <string name="lockscreen_media_blur_title">Media art blur level</string>

    <!-- Clock position -->
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_title">Clock position</string>

    <!-- Clock AM/PM -->
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
    <string name="status_bar_am_pm_unavailable">24-hour clock is enabled</string>

    <!-- Clock show seconds -->
    <string name="status_bar_clock_show_seconds_title">Clock show seconds</string>
    <string name="status_bar_clock_show_seconds_desc">Show hours, minutes, and seconds</string>

    <!-- Battery style and percentage -->
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="battery_style_category_title">Battery Styles</string>
    <string name="battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_percentage_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>

    <!-- Brightness slider -->
    <string name="qqs_show_brightness_title">Show brightness slider in Quick QS panel</string>
    <string name="brightness_slider_position_title">Brightness slider position</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="show_auto_brightness_button_title">Show auto brightness button</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>

    <!-- Pulse -->
    <string name="ambient_light_category">Edge lighting</string>
    <string name="keywords_pulse_ambient_light_display">notification, notifications, edge, light, colour, color</string>
    <string name="pulse_ambient_light_text">Edge lighting makes your screen glow when you receive a notification. This makes it easier to figure when you get a pulse while the phone is doze mode.</string>
    <string name="pulse_ambient_light_title">Edge lighting</string>
    <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="ambient_notification_light_accent_title">System accent color</string>
    <string name="ambient_notification_light_color_automatic_title">Notification color</string>
    <string name="pulse_ambient_light_color">When pulsing, use</string>

    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the settings category for theme overlays. -->
    <string name="theme_customization_category">Theming</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize headline and body fonts. -->
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the adaptive icon shape (e.g. launcher and quick settings icons). -->
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the system wide icon pack. -->
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>

    <!-- [CHAR_LIMIT=NONE] Developer Settings: Label for the option that turns off customizations for a given category.-->
    <string name="theme_customization_device_default">Device default</string>

    <!-- Custom Wi-Fi bar icons -->
    <string name="theme_customization_wifi_icon_title">Wifi icon</string>
    <string name="theme_customization_wifi_icon_summary">Set Wifi icon style</string>

    <!-- Custom Signal bar icons -->
    <string name="theme_customization_signal_icon_title">Signal icons</string>
    <string name="theme_customization_signal_icon_summary">Set signal icons style</string>

    <!-- 4G icon -->
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>

    <!-- Old mobile type icons -->
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>

    <!-- Data disabled icon -->
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>

    <!-- reTicker -->
    <string name="reticker_category" translatable="false">reTicker</string>
    <string name="reticker_title">reTicker\nRequires SystemUI restart</string>
    <string name="reticker_summary">Replace your notifications with a redesigned version of tickers. \nSlim and less invasive than a standard notification</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="reticker_landscape_only_title">Landscape only</string>
    <string name="reticker_landscape_only_summary">Only enable reTicker when device is in landscape mode</string>
</resources>
